# MIPT_Programs

./: FS_test.c  README.md
Acronis_Parallel/Cache_Friendly_Matrix/: Matrix.cpp
Acronis_Parallel/Lock-Free Stack/: Lock-free Stack.cpp
Acronis_Parallel/Spin-Lock/: SpinLock.cpp
Exponent_count/: е.cpp
FS/: lsof.c  ps.c  reader_ext2.c
FS/reader_ext2/: reader_ext2.c  structs.h  superblock.h
Game_of_life/: main.cpp
Integral/: Integral.cpp  Semaphore.h
Merge_sort/: Merge_sort.cpp
Parallel/Exponent_count/: VeryLongNumbers.hpp
Parallel/Game_of_life/: Game_of_life.cpp
Parallel/Harmonic_series/: Harmonic_series.cpp
Parallel/Integral/: Integral.cpp
Parallel/Transport_equation/: Plot.ipynb
Parallel_1/Exponent_count/: е.cpp
Parallel_1/Game_of_life/: Game_of_life.cpp
Parallel_1/Harmonic_series/: Harmonic_series.cpp
Parallel_1/Integral/: Semaphore.h
Parallel_1/Merge_sort/: Merge_sort.cpp
Parallel_1/Ray_traycing/: Moller_Trumbore.h  Ray_traycing.cpp
Parallel_1/Round_send/: Round_send.cpp
Parallel_2/: Balance_test.cpp  Harmonic_series.cpp  Matrix_multiply.cpp  Simple_example.cpp  Strauss.cpp  Sudoku.cpp  fft.cpp  lab_1.cpp
Parallel_2/Sudoku/: Sudoku.cpp  Sudoku_3.txt  Sudoku_4.txt  Sudoku_4_e.txt  Sudoku_5_1.txt  Sudoku_5_2.txt  Sudoku_5_3.txt  Sudoku_O.txt
Parallel_2/fft/: fft.cpp  fft.ipynb
Ray_traycing/: Moller_Trumbore.h  Ray_traycing.cpp  geometry.h
Round_send/: Round_send.cpp
Transport_equation/: Plot.ipynb  Transport_equation.cpp
image_reciver/: CMakeLists.txt  config.json  receiver.cpp  sender.cpp  task.txt
(+2 files in other folders)
